--- a/src/notifications/notifications.html
+++ b/src/notifications/notifications.html
@@ -41,9 +41,7 @@
                   <input class="form-control" id="newRate" type="text" aria-describedby="rate" aria-label="rate" placeholder="Loading..." />
 
                   <div class="input-group-append">
-                    <button class="btn btn-outline-inverse-sirius" type="button" onclick="addRow()">
-                      Add
-                    </button>
+                    <button class="btn btn-outline-inverse-sirius" type="button" onclick="addRow()">Add</button>
                   </div>
                 </div>
               </form>
